almost done - minimal details left

--- a/src/app/components/notificaciones/notificaciones.component.html
+++ b/src/app/components/notificaciones/notificaciones.component.html
@@ -1,5 +1,5 @@
 <div class="heading-section">
-  <h1>Notificaciones</h1>
+  <h1 class="title-views">Notificaciones</h1>
   <button
     *ngIf="!isAdmin"
     class="btn btn-primary"
