--- a/src/app/components/pagos/pagos.component.html
+++ b/src/app/components/pagos/pagos.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-  <h1>Pagos</h1>
+  <h1 class="title-views">Pagos</h1>
   <div class="row">
     <div class="col-12">
       <div class="card">
