--- a/src/app/components/cargas/cargas.component.html
+++ b/src/app/components/cargas/cargas.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <!-- <app-page-title title="Cargas"></app-page-title> -->
-  <h1>Cargas</h1>
+  <h1 class="title-views">Cargas</h1>
   <div class="row">
     <div class="col-12">
       <div class="card">
