--- a/src/app/components/productos/productos.component.html
+++ b/src/app/components/productos/productos.component.html
@@ -4,7 +4,7 @@
       <app-rubros></app-rubros>
     </div>
     <div class="custom-model-child">
-        <h1>Productos</h1>
+      <h1 class="title-views">Productos</h1>
       <div class="row">
         <div class="col">
           <div class="card">
