--- a/src/styles.scss
+++ b/src/styles.scss
@@ -58,3 +58,27 @@
     transform: rotate(360deg);
   }
 }
+
+.title-views {
+  text-transform: uppercase;
+  font-size: 1rem;
+  font-weight: 600;
+  margin: .7rem 0 1.2rem 0;
+}
+
+/* Estilos para posicionar el ícono de búsqueda dentro del input */
+.search-box {
+  position: relative;
+}
+
+.search-input {
+  padding-right: 2.5rem; /* Espacio adicional a la derecha para el ícono */
+}
+
+.search-icon {
+  position: absolute;
+  top: 50%;
+  right: 10px; /* Ajusta este valor según sea necesario */
+  transform: translateY(-50%);
+  cursor: pointer;
+}
