--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -22,7 +22,7 @@
             </div>
           </div>
           <div class="card-body pt-0">
-            <div>
+            <!-- <div>
               <div class="avatar-md profile-user-wid mb-4">
                 <span class="avatar-title rounded-circle bg-light">
                   <img
@@ -33,7 +33,7 @@
                   />
                 </span>
               </div>
-            </div>
+            </div> -->
             <div class="p-2">
               <form
                 class="form-horizontal"
@@ -116,11 +116,11 @@
                   </button>
                 </div>
 
-                <div class="mt-4 text-center">
+                <!-- <div class="mt-4 text-center">
                   <a routerLink="/reset-password" class="text-muted"
                     ><i class="mdi mdi-lock mr-1"></i> Olvidé mi contraseña</a
                   >
-                </div>
+                </div> -->
               </form>
             </div>
           </div>
