--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -25,7 +25,7 @@
             </div>
           </div>
           <div class="card-body pt-0">
-            <div>
+            <!-- <div>
               <a routerLink="/">
                 <div class="avatar-md profile-user-wid mb-4">
                   <span class="avatar-title rounded-circle bg-light">
@@ -38,7 +38,7 @@
                   </span>
                 </div>
               </a>
-            </div>
+            </div> -->
             <div class="p-2">
               <form
                 class="needs-validation"
