--- a/src/app/layouts/layout/layout.component.scss
+++ b/src/app/layouts/layout/layout.component.scss
@@ -33,7 +33,7 @@
       padding: 1.25rem 2.5rem 1.25rem 0;
       .btn-contain {
         display: flex;
-        justify-content: end;
+        justify-content: flex-end;
         align-items: center;
         gap: .25rem;
         i {
