--- a/src/app/components/pagos/pagos.component.html
+++ b/src/app/components/pagos/pagos.component.html
@@ -12,6 +12,7 @@
                     type="text"
                     class="form-control"
                     placeholder="Buscar correo"
+                    (input)="onSearchInputChange($event)"
                     [(ngModel)]="term"
                   />
                   <i class="bx bx-search-alt search-icon"></i>
