--- a/src/app/components/cargas/cargas.component.html
+++ b/src/app/components/cargas/cargas.component.html
@@ -13,6 +13,7 @@
                     type="text"
                     class="form-control"
                     placeholder="Buscar correo"
+                    (input)="onSearchInputChange($event)"
                     [(ngModel)]="term"
                   />
                   <i class="bx bx-search-alt search-icon"></i>
