--- a/src/app/components/rubros/rubros.component.html
+++ b/src/app/components/rubros/rubros.component.html
@@ -15,6 +15,7 @@
                     type="text"
                     class="form-control"
                     placeholder="Buscar rubro"
+                    (input)="onSearchInputChange($event)"
                     [(ngModel)]="term"
                   />
                   <i class="bx bx-search-alt search-icon"></i>
