--- a/src/app/layouts/layout/layout.component.html
+++ b/src/app/layouts/layout/layout.component.html
@@ -54,8 +54,8 @@
           routerLinkActive="active"
         >
           <i class="bx bx-bell"></i>
-          <span>Notificaciones</span>
-          <span class="badge rounded-pill bg-success">X</span>
+          <span style="margin-right: .5rem;">Notificaciones</span>
+          <span class="badge rounded-pill bg-success text-white">{{notificationsQuantity}}</span>
         </a>
       </li>
       <li *ngIf="isAdmin">
