--- a/src/app/components/register/register.component.html
+++ b/src/app/components/register/register.component.html
@@ -6,7 +6,7 @@
           <div class="bg-soft bg-primary">
             <div class="row">
               <div class="col-7">
-                <div class="text-primary p-4">
+                <div class="text-primary p-4 custom-text-size">
                   <h5 class="text-primary">Registro</h5>
                   <p>
                     Registrate como transportista o dador de carga y forma parte
@@ -24,7 +24,7 @@
               </div>
             </div>
           </div>
-          <div class="card-body pt-0">
+          <div class="card-body pt-0 custom-padding">
             <!-- <div>
               <a routerLink="/">
                 <div class="avatar-md profile-user-wid mb-4">
@@ -59,7 +59,7 @@
                 }}</ngb-alert>
 
                 <div class="mb-3">
-                  <label class="control-label">Nombre / Razón Social</label>
+                  <label class="control-label" style="margin-top: .5rem;">Nombre / Razón Social</label>
                   <input
                     class="form-control"
                     placeholder="Ingrese su nombre o razón social"
@@ -333,7 +333,7 @@
 
                 <div class="mt-4 d-grid">
                   <button
-                    class="btn btn-primary"
+                    class="btn btn-primary custom-btn"
                     type="submit"
                     [disabled]="!signupForm.valid"
                   >
@@ -347,7 +347,7 @@
         <!-- end card -->
 
         <div class="mt-5 text-center">
-          <p>
+          <p class="custom-text-redirect">
             ¿Ya tienes una cuenta?
             <a routerLink="/login" class="fw-medium text-primary">
               Ingresa desde aquí</a
