--- a/src/app/components/register/register.component.scss
+++ b/src/app/components/register/register.component.scss
@@ -1,5 +1,5 @@
 @media (max-width:768px) {
-    .control-label, .custom-btn, .custom-text-redirect {
+    .control-label, .custom-btn, .custom-text-redirect, .input-radio {
         font-size: 1rem;
     }
     .form-control, .form-select {
